force-app/main/default/objects/npe4__Relationship_Auto_Create__c/npe4__Relationship_Auto_Create__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Automatically generates a Relationship between a Contact and another Contact or a Contact and a Contact/Campaign Member based on a custom lookup field.</description>
    <label>Creación automática de relación</label>
</CustomObject>