force-app/main/default/objects/npe4__Relationship_Auto_Create__c/fields/npe4__Field__c.field-meta.xml
<CustomField>
    <fullName>npe4__Field__c</fullName>
    <description>The field insert or update that triggers the creation of this Relationship</description>
    <inlineHelpText>El campo que al insertarse o actualizarse desencadenará la creación de esta relación.</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>