force-app/main/default/objects/npe4__Relationship_Auto_Create__c/fields/npe4__Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>npe4__Relationship_Type__c</fullName>
    <description>The Relationship type to be created between the base object and the lookup object.  The lookup object will receive the reciprocal Relationship, if one is available.</description>
    <inlineHelpText>El tipo de relación que se creará entre el objeto base y el objeto de búsqueda. El objeto de búsqueda recibirá la relación reciproca si hay una disponible.</inlineHelpText>
    <label>Relationship Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>